2007-11-08  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/color.ccg:
	* clutter/src/color.hg: I had forgotten to add an rgb constructor, which is
	the most common case and corresponds to the C use:
	ClutterColor color = { 0, 0, 0, 255};
	This means that we can't have a constructor for hls, because they would be
	the same signature.  So I removed the hls and hlsx constructors.  If you
	want to set a color via hls, you'll need to construct it and then call
	Color::set_from_hls() instead.  I also added getters/setters for all of the
	individual red/green/blue/alpha values and one setter for all of them at
	once. This API might still need a bit more thought to make it more natural
	* examples/test-boxes.cc: updated for the new color API

2007-11-08  Murray Cumming  <murrayc@murrayc.com>

	* clutter/src/actor.hg: Use the new _DERIVES_INITIALLY_UNOWNED 
	gmmproc macro from the latest glibmm from svn.
	* examples/test-boxes.cc: Remove the extra reference() calls. These 
	should no longer be necessary.

2007-11-07  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/cluttermm/init.cc:
	* clutter/cluttermm/init.h: just modifiying the init() function enough so
	that I can get the example to run
	* examples/Makefile.am:
	* examples/test-boxes.cc: added a simple example which is a translation of
	the test-boxes.c program from clutter.  It doesn't work completely yet, but
	a window shows up and it's the right size.

2007-11-07  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/cluttermm.h: Add the rest of the headers created so far to the m
	ain cluttermm.h include file
	* configure.in: removed an example makefile from AC_OUTPUT since it no
	longer exists

2007-11-07  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/box.hg: I think the HBox and VBox classes should be used by
	RefPtr, so I added create() functions and made their constructors private

2007-11-07  Jonathon Jongsma  <jjongsma@gnome.org>
