@@ -58,9 +58,9 @@ public:
   _WRAP_METHOD(void set_title(const Glib::ustring& title), clutter_stage_set_title)
   _WRAP_METHOD(void set_user_resizable(bool value), clutter_stage_set_user_resizable)
   _WRAP_METHOD(bool get_user_resizable() const, clutter_stage_get_user_resizable)
-  _WRAP_METHOD(Glib::RefPtr<Actor> get_actor_at_pos(int x, int y), clutter_stage_get_actor_at_pos)
+  _WRAP_METHOD(Glib::RefPtr<Actor> get_actor_at_pos(int x, int y), clutter_stage_get_actor_at_pos, refreturn)
   _WRAP_METHOD(Glib::RefPtr<const Actor> get_actor_at_pos(int x, int y) const, clutter_stage_get_actor_at_pos, constversion)
-  _WRAP_METHOD(Glib::RefPtr<Actor> get_key_focus(), clutter_stage_get_key_focus)
+  _WRAP_METHOD(Glib::RefPtr<Actor> get_key_focus(), clutter_stage_get_key_focus, refreturn)
   _WRAP_METHOD(Glib::RefPtr<const Actor> get_key_focus() const, clutter_stage_get_key_focus, constversion)
   _WRAP_METHOD(void set_key_focus(const Glib::RefPtr<Actor>& actor), clutter_stage_set_key_focus)
   _WRAP_METHOD(Glib::RefPtr<Gdk::Pixbuf> snapshot(int x, int y, int width, int height) const, clutter_stage_snapshot)
